--- a/index.html
+++ b/index.html
@@ -3,202 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Birthday Sourav</title>
-    <style>
-        /* Global Styles */
-        body {
-            font-family: 'Poppins', sans-serif;
-            background: linear-gradient(45deg, #f6d02f, #f68a35);
-            color: white;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            text-align: center;
-            overflow: hidden;
-            position: relative;
-            padding: 20px;
-            animation: backgroundAnimation 30s infinite alternate;
-        }
-
-        h1 {
-            font-family: 'Playfair Display', serif;
-            font-size: 3rem;
-            font-weight: 600;
-            animation: fadeIn 5s ease-in-out, glowing 1.5s infinite alternate;
-            opacity: 0;
-            margin-bottom: 30px;
-            letter-spacing: 2px;
-        }
-
-        .message {
-            font-size: 1.3rem;
-            line-height: 1.6;
-            max-width: 700px;
-            margin: 0 auto;
-            padding: 20px;
-            animation: fadeInText 8s ease-in-out forwards;
-            opacity: 0;
-            text-align: justify;
-        }
-
-        .container {
-            position: relative;
-            padding: 20px;
-        }
-
-        /* Balloons and Hearts */
-        .heart, .balloon {
-            position: absolute;
-            font-size: 3rem;
-            color: red;
-            animation: float 10s ease-in-out infinite;
-            pointer-events: none;
-        }
-
-        .heart {
-            font-size: 2rem;
-            color: #FF2D55;
-            animation: float 10s ease-in-out infinite, heartBeat 1s alternate infinite;
-        }
-
-        .balloon {
-            color: #ff69b4;
-            font-size: 3rem;
-            opacity: 0.8;
-        }
-
-        .heart:nth-child(1) {
-            top: 0;
-            left: 10%;
-        }
-
-        .heart:nth-child(2) {
-            top: 0;
-            left: 80%;
-        }
-
-        .balloon:nth-child(1) {
-            top: 5%;
-            left: 5%;
-        }
-
-        .balloon:nth-child(2) {
-            top: 5%;
-            right: 5%;
-        }
-
-        .balloon:nth-child(3) {
-            bottom: 5%;
-            left: 5%;
-        }
-
-        .balloon:nth-child(4) {
-            bottom: 5%;
-            right: 5%;
-        }
-
-        /* Footer Styles */
-        footer {
-            position: absolute;
-            bottom: 20px;
-            width: 100%;
-            text-align: center;
-            font-size: 1.2rem;
-            color: #fff;
-            font-family: 'Poppins', sans-serif;
-            animation: fadeInFooter 5s ease-in-out forwards;
-        }
-
-        /* Animations */
-        @keyframes fadeIn {
-            0% { opacity: 0; }
-            100% { opacity: 1; }
-        }
-
-        @keyframes fadeInText {
-            0% { opacity: 0; transform: translateY(30px); }
-            100% { opacity: 1; transform: translateY(0); }
-        }
-
-        @keyframes glowing {
-            0% { text-shadow: 0 0 5px #fff, 0 0 10px #FF2D55, 0 0 15px #FF2D55; }
-            50% { text-shadow: 0 0 10px #fff, 0 0 20px #FF2D55, 0 0 30px #FF2D55; }
-            100% { text-shadow: 0 0 5px #fff, 0 0 10px #FF2D55, 0 0 15px #FF2D55; }
-        }
-
-        @keyframes backgroundAnimation {
-            0% { background: linear-gradient(45deg, #f6d02f, #f68a35); }
-            100% { background: linear-gradient(45deg, #FF2D55, #ff69b4); }
-        }
-
-        @keyframes float {
-            0% { transform: translateY(0); }
-            50% { transform: translateY(-20px); }
-            100% { transform: translateY(0); }
-        }
-
-        @keyframes heartBeat {
-            0% { transform: scale(1); }
-            100% { transform: scale(1.2); }
-        }
-
-        /* Responsive Design */
-        @media (max-width: 768px) {
-            h1 {
-                font-size: 2.2rem;
-            }
-
-            .message {
-                font-size: 1rem;
-            }
-
-            .heart, .balloon {
-                font-size: 2rem;
-            }
-
-            footer {
-                font-size: 1rem;
-            }
-        }
-
-        /* Custom Cursor */
-        body {
-            cursor: url('https://cdn.pixabay.com/photo/2017/01/31/00/40/balloon-2026541_960_720.png'), auto;
-        }
-    </style>
+    <title>Happy Birthday [Friend's Name]</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Happy Birthday Sourav!</h1>
-        <div class="message">
-            <p>I know meri puri life ch jinni tu meri care kiti shayad kise ne ni kiti hou. And you are a very special person to me.</p>
-            <p>Aaj to 3 saal pehla isse month ch apa mile c and I didn't know ki tere nal ehna deep connection bnjuga mera.</p>
-            <p>Mai kde sochya v ni c. Since day one, tu hamesha mera stand lya and hmesha mere lyi bolya. Shayad mai ehni expressive nahi a.</p>
-            <p>I know wmai apni life ch bahot galtiya kitiya and mai ohna nu realise v krdi a. But it's time and life. Agge vadan to ilava apa kuch ni kr skde.</p>
-            <p>I know pichle kuch dina to mai tere nal sahi tarah gal v ni krri. I am sorry for that, you know mai kinni stressed a es time te and there's a lot going on in my life.</p>
-            <p>But ek gal jo schio tenu dilo kehna chauni a ke tu dil da bahot nice insaan a and I was lucky to have you in my life.</p>
-            <p>But life and time will never be the same and hun sadde dova di life ch eda di situation a chuki a ke apa nu ek duje to attachment htauniya peniya.</p>
-            <p>Tu jinna mrzi bole ki mai teroi care ni kiti ya whtever, andro tenu v pta jdo tk tera kita, sb nalo vadd kita.</p>
-            <p>Eh saal apni zindagi de bahot important din hunde ne. And I know apna future ni reha and I am really very sorry ki tenu mai bahot vaar disappoint kita.</p>
-            <p>But hle v tu mere dil ch abhot special place hold krda a. I hope tera bday sohna sohna jave. Rabb teri lmbi umr kre.</p>
-            <p>Tenu jo chaida life ch oh mile. I hope tu eh gl nu smje ki kise ek bnde de jaan nal life ruk ni jndi.</p>
-            <p>I would love to see you grow and living happy. Happy bday once again Shahid.</p>
-        </div>
+        <header>
+            <h1 class="main-heading">Happy 23rd Birthday, Sourav!</h1>
+            <div class="sub-heading">A special day for a special friend.</div>
+        </header>
+
+        <section class="main-content">
+            <div class="image-section">
+                <img src="https://via.placeholder.com/800x400" alt="Birthday Image" class="birthday-image">
+            </div>
+            <div class="message-section">
+                <h2>Your Birthday Message:</h2>
+                <p class="message-placeholder">
+                    <!-- Write your personal birthday wish here -->
+                    "Dear Sourav, I hope this year brings you endless happiness, love, and success. You deserve the best and I’m so lucky to have you as a friend. Enjoy your special day to the fullest!"
+                </p>
+            </div>
+        </section>
+
+        <footer>
+            <div class="footer-text">
+                <p>Made with love for a special person by Shayida!</p>
+            </div>
+        </footer>
     </div>
-
-    <!-- Hearts and Balloons around the border -->
-    <div class="heart"></div>
-    <div class="heart"></div>
-    <div class="balloon"></div>
-    <div class="balloon"></div>
-    <div class="balloon"></div>
-    <div class="balloon"></div>
-
-    <!-- Footer -->
-    <footer>
-        <p>Wish from - SHAYIDA (14TH MARCH, 2025)</p>
-    </footer>
 </body>
 </html>
