--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Birthday [Friend's Name]</title>
+    <title>Happy Birthday Sourav</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,13 +12,20 @@
             <h1 class="main-heading">Happy 23rd Birthday, Sourav!</h1>
             <div class="sub-heading">A special day for a special friend.</div>
         </header>
-
-        <section class="main-content">
-            <div class="image-section">
-                <img src="https://via.placeholder.com/800x400" alt="Birthday Image" class="birthday-image">
-            </div>
             <div class="message-section">
-                <h2>Your Birthday Message:</h2>
+                <h2> Birthday Message:</h2>
+                <p>I know meri puri life ch jinni tu meri care kiti shayad kise ne ni kiti hou. And you are a very special person to me.</p>
+            <p>Aaj to 3 saal pehla isse month ch apa mile c and I didn't know ki tere nal ehna deep connection bnjuga mera.</p>
+            <p>Mai kde sochya v ni c. Since day one, tu hamesha mera stand lya and hmesha mere lyi bolya. Shayad mai ehni expressive nahi a.</p>
+            <p>I know wmai apni life ch bahot galtiya kitiya and mai ohna nu realise v krdi a. But it's time and life. Agge vadan to ilava apa kuch ni kr skde.</p>
+            <p>I know pichle kuch dina to mai tere nal sahi tarah gal v ni krri. I am sorry for that, you know mai kinni stressed a es time te and there's a lot going on in my life.</p>
+            <p>But ek gal jo schio tenu dilo kehna chauni a ke tu dil da bahot nice insaan a and I was lucky to have you in my life.</p>
+            <p>But life and time will never be the same and hun sadde dova di life ch eda di situation a chuki a ke apa nu ek duje to attachment htauniya peniya.</p>
+            <p>Tu jinna mrzi bole ki mai teroi care ni kiti ya whtever, andro tenu v pta jdo tk tera kita, sb nalo vadd kita.</p>
+            <p>Eh saal apni zindagi de bahot important din hunde ne. And I know apna future ni reha and I am really very sorry ki tenu mai bahot vaar disappoint kita.</p>
+            <p>But hle v tu mere dil ch abhot special place hold krda a. I hope tera bday sohna sohna jave. Rabb teri lmbi umr kre.</p>
+            <p>Tenu jo chaida life ch oh mile. I hope tu eh gl nu smje ki kise ek bnde de jaan nal life ruk ni jndi.</p>
+            <p>I would love to see you grow and living happy. Happy bday once again Shahid.</p>
                 <p class="message-placeholder">
                     <!-- Write your personal birthday wish here -->
                     "Dear Sourav, I hope this year brings you endless happiness, love, and success. You deserve the best and I’m so lucky to have you as a friend. Enjoy your special day to the fullest!"
