--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <p>I would love to see you grow and living happy. Happy bday once again Shahid.</p>
                 <p class="message-placeholder">
                     <!-- Write your personal birthday wish here -->
-                    "Dear Sourav, I hope this year brings you endless happiness, love, and success. You deserve the best and I’m so lucky to have you as a friend. Enjoy your special day to the fullest!"
+                    "Dear Sourav, I hope this year brings you endless happiness, love, and success. You deserve the best thing ever happened to me and I’m so lucky to have you. Enjoy your special day to the fullest!"
                 </p>
             </div>
         </section>
